.gradle/gradle.log
This mapping 'snapshot_20171003' was designed for MC 1.12! Use at your own peril.This mapping 'snapshot_20171003' was designed for MC 1.12! Use at your own peril.

#################################################
         ForgeGradle 2.3-SNAPSHOT-6084129e        
  https://github.com/MinecraftForge/ForgeGradle  
#################################################
                 Powered by MCP                  
             http://modcoderpack.com             
     by: Searge, ProfMobius, R4wk, ZeuX          
     Fesh0r, IngisKahn, bspkrs, LexManos         
#################################################
:deobfCompileDummyTask
:deobfProvidedDummyTask
:sourceApiJava UP-TO-DATE
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavaC:\Users\Izumi\Documents\GitHub\RWBYM-2.0\build\sources\main\java\be\bluexin\rwbym\entity\EntityApathy.java:28: warning: AudioPlayer is internal proprietary API and may be removed in a future release
import static sun.audio.AudioPlayer.player;
                       ^
C:\Users\Izumi\Documents\GitHub\RWBYM-2.0\build\sources\main\java\be\bluexin\rwbym\RWBYEntities.java:6: error: cannot find symbol
import be.bluexin.rwbym.weaponry.RWBYAmmoEntity;
                                ^
  symbol:   class RWBYAmmoEntity
  location: package be.bluexin.rwbym.weaponry
C:\Users\Izumi\Documents\GitHub\RWBYM-2.0\build\sources\main\java\be\bluexin\rwbym\entity\EntityApathy.java:28: warning: AudioPlayer is internal proprietary API and may be removed in a future release
import static sun.audio.AudioPlayer.player;
                       ^
C:\Users\Izumi\Documents\GitHub\RWBYM-2.0\build\sources\main\java\be\bluexin\rwbym\proxy\ClientProxy.java:14: error: cannot find symbol
import be.bluexin.rwbym.weaponry.RWBYAmmoEntity;
                                ^
  symbol:   class RWBYAmmoEntity
  location: package be.bluexin.rwbym.weaponry
2 errors
2 warnings
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 8.717 secs
